appId: com.example.mobile_app
---
- launchApp:
    clearState: true

- tapOn:
    text: "Wait"
    optional: true

- tapOn:
    text: "Close app"
    optional: true

- extendedWaitUntil:
    visible: "(?s).*DateTimeChecker.*"
    timeout: 30000

- tapOn: "Day"
- inputText: "15"

- tapOn: "Month"
- inputText: "6"

- tapOn: "Year"
- inputText: "2000"

- hideKeyboard
- tapOn: "Check"

- extendedWaitUntil:
    visible: "(?s).*15/06/2000 is a valid date\\..*"
    timeout: 10000
- takeScreenshot: valid-date-result
